--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,6 +15,7 @@
     "ms-azuretools.vscode-docker",
     "Orta.vscode-jest",
     "pflannery.vscode-versionlens",
+    "pivotal.vscode-spring-boot",
     "redhat.java",
     "redhat.vscode-xml",
     "redhat.vscode-yaml",
@@ -24,8 +25,10 @@
     "slevesque.vscode-autohotkey",
     "VisualStudioExptTeam.vscodeintellicode",
     "vscjava.vscode-java-debug",
+    "vscjava.vscode-java-dependency",
     "vscjava.vscode-java-test",
     "vscjava.vscode-maven",
+    "vscjava.vscode-spring-boot-dashboard",
     "vscjava.vscode-spring-initializr",
     "wmaurer.vscode-jumpy",
     "yzhang.markdown-all-in-one",
