--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,21 @@
 {
+  // settings shared by all of our repos
   "editor.detectIndentation": false,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "editor.formatOnType": true,
   "editor.insertSpaces": true,
-  "editor.tabSize": 2,
   "files.encoding": "utf8",
-  "files.eol": "\n",
-  "files.insertFinalNewline": true,
-  "files.trimTrailingWhitespace": true,
-  "git-graph.dialog.rebase.ignoreDate": false,
-  "git-graph.dialog.rebase.launchInteractiveRebase": false,
-  "git-graph.fetchAndPrune": true,
   "git.autofetch": true,
   "git.autorefresh": true,
   "git.fetchOnPull": false,
   "git.rebaseWhenSync": true,
   "git.useForcePushWithLease": true,
+  "git-graph.dialog.rebase.ignoreDate": false,
+  "git-graph.dialog.rebase.launchInteractiveRebase": false,
+  "git-graph.fetchAndPrune": true,
+  "git-graph.useMailmap": true,
+  // -----------------------------------
   "java.codeGeneration.generateComments": true,
   "java.completion.guessMethodArguments": true,
   "java.implementationsCodeLens.enabled": true,
@@ -25,4 +24,5 @@
   "java.referencesCodeLens.enabled": true,
   "java.saveActions.organizeImports": true,
   "java.showBuildStatusOnStart.enabled": true,
+  "vsintellicode.java.completionsEnabled": true
 }
